# lib8svx

./: README.md  configure.ac  release.nix
doc/: 8SVX.asc  Makefile.am
doc/man/: 8svxpack.1  8svxpp.1  Makefile.am
src/: Makefile.am  lib8svx.pc.in  lib8svx.sln
src/8svxpack/: 8svxpack.vcxproj  Makefile.am  main.c  pack.c  pack.h
src/8svxpp/: 8svxpp.vcxproj  Makefile.am  main.c  pp.c  pp.h
src/lib8svx/: 8svx.c  8svx.h  8svxinstrument.c  8svxinstrument.h  Makefile.am  annotation.c  annotation.h  author.c  author.h  body.c  body.h  channel.c  channel.h  copyright.c  copyright.h  fibdelta.c  fibdelta.h  lib8svx.def  lib8svx.vcxproj  lib8svx.vcxproj.filters  name.c  name.h  playbackenvelope.c  playbackenvelope.h  plenvelope.c  plenvelope.h  voice8header.c  voice8header.h  volumecontrol.c  volumecontrol.h
tests/: Makefile.am  readsimple8svx.c  simple8svxdata.c  simple8svxdata.h  writesimple8svx.c
