lib_LTLIBRARIES = lib8svx.la
pkginclude_HEADERS = voice8header.h body.h copyright.h name.h annotation.h author.h plenvelope.h volumecontrol.h playbackenvelope.h fibdelta.h 8svx.h 8svxinstrument.h channel.h

lib8svx_la_SOURCES = voice8header.c body.c copyright.c name.c annotation.c author.c plenvelope.c volumecontrol.c playbackenvelope.c fibdelta.c 8svx.c 8svxinstrument.c channel.c
lib8svx_la_CFLAGS = $(LIBIFF_CFLAGS)
lib8svx_la_LIBADD = $(LIBIFF_LIBS)
